--- a/index.html
+++ b/index.html
@@ -237,6 +237,111 @@
     </div>
   </div>
 
+  <div id="es-efect"
+    style="
+      text-align: center;
+      position: relative;
+    "
+  >
+    <div 
+      id="esefect-headline"
+      style="
+        width: 100%;
+        text-align: center;
+        padding: 0;
+        margin-top: 80px;
+      "  
+    >
+      <h2 
+        style="
+          font-size: 35px;
+          font-weight: 900;
+          padding: 5px;
+          text-transform: uppercase;
+          color: black;
+        "
+      >
+        Efekt? Nieustanny blask,</br>
+        Trwały i piękny kolor
+      </h2>
+    </div>
+    <div style="
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 0 16px;
+        margin: 60px auto 64px;
+      ">
+      <div style="
+          display: flex;
+          align-items: flex-end;
+          flex-flow: column;
+          align-items: center;
+          width: 580px;
+          overflow: hidden;
+        ">
+        <img
+        style="
+          width:fit-content;
+          "
+        src="public/assets/kategorie/loreal/vitamino-color-spray/use-before.png"
+        alt=""
+        />
+        <div style="
+          display: flex;
+          background-color: black;
+          
+          width: 100%;
+        ">
+          <h4 
+            style="
+              font-size: 20px;
+              font-weight: 900;
+              padding-left: 40px;
+              text-transform: uppercase;
+              color:#fff;
+            "
+          >
+          PRZED użyciem
+        </h4>
+        </div>
+      </div>
+      <div style="
+          display: flex;
+          align-items: flex-end;
+          flex-flow: column;
+          align-items: center;
+          width: 580px;
+          overflow: hidden;
+        ">
+        <img
+        style="
+          width:fit-content;
+        "
+        src="public/assets/kategorie/loreal/vitamino-color-spray/use-after.png"
+        alt=""
+        />
+        <div style="
+          display: flex;
+          background-color: black;
+          width: 100%;
+        ">
+          <h4 
+            style="
+              font-size: 20px;
+              font-weight: 900;
+              padding-left: 40px;
+              text-transform: uppercase;
+              color:#fff;
+            "
+          >
+          po użyciu vitamino color
+          </h4>      
+        </div> 
+      </div>  
+    </div>
+  </div>
+
   <div id="es-use"
     style="
       text-align: center;
@@ -279,9 +384,8 @@
           text-align: center;
         "
       >
-        Niewielką porcję olejku nanieś na umyte, osuszone ręcznikiem włosy.
-        Następnie rozprowadź kosmetyk od połowy ich długości aż po końce.
-        Nie spłukuj. Stylizuj wedle uznania.
+        Spryskaj umyte, wilgotne lub suche włosy.</br>
+        Następnie stylizuj wedle uznania.
       </p>
 
       <p
@@ -293,7 +397,7 @@
           text-align: center;
         "
       >
-        Olejek Absolut Repair może być stosowany również do podkreślenia efektu końcowego fryzury.
+        W przypadku dostania się preparatu do oczu, natychmiast przepłukać je wodą.
       </p>
 
 
@@ -322,13 +426,13 @@
           align-items: flex-end;
           justify-content: center;
           gap: 64px 16px;
-          margin: 80px auto 64px;
+          margin: 60px auto 64px;
         ">
         <div style="
             display: flex;
             flex-flow: column;
             align-items: center;
-            width: 200px;
+            width: 240px;
           ">
           <p style="
               margin: 0;
@@ -340,9 +444,9 @@
               margin-bottom: 10px;
             ">
             <strong>Szampon</strong><br>
-            regenerujący</br> włosy zniszczone<br>
+            do włosów</br>koloryzowanych<br>
           </p>
-          <a href="https://friser.pl/loreal-professionnel/absolut-repair-gold/szampon-odbudowujacy-wlosy-300ml" style="
+          <a href="https://friser.pl/loreal-professionnel/vitamino-color/szampon-do-wlosow-farbowanych-300ml" style="
               color: #fff;
               background: #000;
               text-decoration: none;
@@ -356,7 +460,7 @@
             display: flex;
             flex-flow: column;
             align-items: center;
-            width: 200px;
+            width: 240px;
           ">
 
           <p style="
@@ -369,9 +473,9 @@
               margin-bottom: 10px;
             ">
             <strong>Odżywka</strong><br>
-            regenerująca</br> włosy zniszczone
+            do włosów</br> koloryzowanych
           </p>
-          <a href="https://friser.pl/loreal-professionnel/absolut-repair-gold/odzywka-do-wlosow-zniszczonych-200ml" style="
+          <a href="https://friser.pl/loreal-professionnel/vitamino-color/odzywka-do-wlosow-farbowanych-200ml" style="
               color: #fff;
               background: #000;
               text-decoration: none;
@@ -385,7 +489,7 @@
             display: flex;
             flex-flow: column;
             align-items: center;
-            width: 200px;
+            width: 240px;
           ">
 
           <p style="
@@ -398,9 +502,9 @@
               margin-bottom: 10px;
             ">
             <strong>Maska </strong><br>
-            do włosów</br> średnich i grubych
+            do włosów</br> koloryzowanych
           </p>
-          <a href="https://friser.pl/loreal-professionnel/absolut-repair-gold/odbudowujaca-klasyczna-maska-do-srednich-i-grubych-wlosow-250ml" style="
+          <a href="https://friser.pl/loreal-professionnel/vitamino-color/maska-do-wlosow-farbowanych-250ml" style="
               color: #fff;
               background: #000;
               text-decoration: none;
@@ -414,7 +518,7 @@
             display: flex;
             flex-flow: column;
             align-items: center;
-            width: 200px;
+            width: 240px;
           ">
 
           <p style="
@@ -426,10 +530,10 @@
               min-height: 56px;
               margin-bottom: 10px;
             ">
-            <strong>Złota maska</strong><br>
-            do kadego</br> rodzaju włosów
+            <strong>Spray 10w1</strong><br>
+            do włosów</br> koloryzowanych
           </p>
-          <a href="https://friser.pl/loreal-professionnel/absolut-repair-gold/odbudowujaca-zlota-maska-do-kazdego-rodzaju-wlosow-250ml" style="
+          <a href="https://friser.pl/loreal-professionnel/vitamino-color/wielofunkcyjny-spray-10-w-1-do-wlosow-koloryzowanych-190ml" style="
               color: #fff;
               background: #000;
               text-decoration: none;
@@ -439,38 +543,21 @@
               font-weight: 300;
             "><strong>sprawdź</strong></a>
         </div>
-        <div style="
-            display: flex;
-            flex-flow: column;
-            align-items: center;
-            width: 200px;
-          ">
-
-          <p style="
-              margin: 0;
-
-              text-align: center;
-              font-size: 17px;
-              line-height: 1;
-              font-weight: 300;
-              min-height: 56px;
-              margin-bottom: 10px;
-            ">
-            <strong>Olejek 10w1</strong><br>
-            do włosów</br> zniszczonych
-          </p>
-          <a href="https://friser.pl/loreal-professionnel/absolut-repair-gold/serum-odbudowujace-10w1-do-zniszczonych-wlosow-90ml" style="
-              color: #fff;
-              background: #000;
-              text-decoration: none;
-              text-transform: uppercase;
-              padding: 8px 24px;
-              line-height: 1;
-              font-weight: 300;
-            "><strong>sprawdź</strong></a>
-        </div>
+       
       </div>
     </div>
 
   </div>  
+  <p
+    style="
+      font-size: 13px;
+      font-weight: 300;
+      padding: 0 20%;
+      color:black;
+      text-align: center;
+    "
+  >
+  *Test instrumentalny </br>
+  ** Test instrumentalny 
+  </p>
 </div>
