--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         Gama stworzona z myślą <strong>o włosach koloryzowanych,</strong> aby zachować ich długotrwały kolor
         i blask oraz zminimalizować powstawanie niechcianych refleksów na włosach. <strong>Odżywia włosy koloryzowane, 
         chroniąc kolor aż do 8 tygodni*.</strong> Formuła <strong>Vitamino Color</strong> oparta została na resveratrolu, 
-        silnym przeciwytleniaczu, który chroni włosy przed wolnymi rodnikami.
+        silnym przeciwutleniaczu, który chroni włosy przed wolnymi rodnikami.
       </p>
       <img 
         src="public/assets/kategorie/loreal/vitamino-color-spray/info.png"
@@ -200,7 +200,7 @@
       >
         <p
           style="
-            font-size: 50px;
+            font-size: 3.5vw;
             margin: 26px auto 26px 10%;
             max-width: 444px;
             text-transform: uppercase;
@@ -220,18 +220,19 @@
         <ul style="
           list-style-type: none;
           margin: 26px auto 26px 3%;
-          font-size: 24px;
+          padding-bottom: 20px;
+          font-size: 1.8vw;
           font-weight: 100;
           line-height: 25px;
           "
         >
           <li style="padding: 0 0 40px 40px;">ochrona termiczna do 230°C**</li>
-          <li style="padding: 0 0 40px 40px;">połysk, miękkość i gładkość włosów</li>
+          <li style="padding: 0 0 40px 40px;">połysk, miękkość i&nbsp;gładkość włosów</li>
           <li style="padding: 0 0 40px 40px;">łatwiejsze rozczesywanie</li>
           <li style="padding: 0 0 40px 40px;">ułatwia suszenie</li>
           <li style="padding: 0 0 40px 40px;">nawilżenie</li>
           <li style="padding: 0 0 40px 40px;">ochrona przeciw łamaniu</li>
-          <li style="padding: 0 0 0 40px;">ochrona przed puszeniem i rozdwajaniem końcówek </li>
+          <li style="padding: 0 0 0 40px;">ochrona przed puszeniem i&nbsp;rozdwajaniem końcówek </li>
         </ul>  
       </div>
     </div>
