--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
       text-align: center;
     "
   >
-  *Test instrumentalny </br>
-  ** Test instrumentalny 
+  *Test instrumentalny: szampon + odżywka. </br>
+  **Test instrumentalny.
   </p>
 </div>
